# Arm_Sim

./: .gitignore  DOCS.md  README.md  agent_log.md
backend/: README.md  pyproject.toml  requirements-dev.txt  requirements.txt
backend/armsim/: __init__.py  arm.py  cli.py  config.py  constants.py  errors.py  joint.py  kinematics.py  logging_utils.py  motion.py  protocol.py  recorder.py  server.py  state.py  validation.py
backend/examples/: basic_two_joint.py  config_driven_demo.py  lan_mode_demo.py  parallel_move_demo.py  trajectory_recording_demo.py
backend/examples/configs/: planar_2dof.yaml  single_joint_smoke.yaml  six_axis_industrial.yaml
backend/tests/: conftest.py  test_arm_api.py  test_config.py  test_kinematics.py  test_motion.py  test_recorder.py
frontend/: README.md  index.html
frontend/css/: layout.css  style.css
frontend/js/: connection_indicator.js  main.js  renderer.js  scale.js  state.js  websocket_client.js
